# devdoc

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  install.ps1  install.sh  pyproject.toml  start-docker.sh
.github/workflows/: ci.yml
devdoc/: __init__.py  cli.py  config.py  crawler.py  kb.py  knowledge.csv  search.py  server.py
docs/plans/: issue-mcp-config-for-opencode.md  mcp-config-fpr-codex.md  mcp-for-kilo-not-right.md
scripts/: build-linux-release.sh  devdoc_entry.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_config.py  test_search.py  test_server.py
