[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devdoc"
version = "0.1.0"
description = "Documentation MCP service for local LLMs and agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "click>=8.0.0",
    "crawl4ai>=0.4.0",
    "rich>=13.0.0",
]

[project.scripts]
devdoc = "devdoc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["devdoc"]
