[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devdoc"
version = "0.1.0"
description = "Documentation MCP service for local LLMs and agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "click>=8.0.0",
    "crawl4ai>=0.4.0",
    "rich>=13.0.0",
]

[project.scripts]
devdoc = "devdoc.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["devdoc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
